<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvp.forecast.ForecastActivity">

    <TextView
        android:id="@+id/textview_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Moscow" />

    <TextView
        android:id="@+id/textview_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_city"
        tools:text="light shower snow" />

    <ImageView
        android:id="@+id/imageview_weather"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_description" />

    <TextView
        android:id="@+id/textview_temperature_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="@+id/textview_temperature"
        app:layout_constraintEnd_toStartOf="@+id/textview_temperature"
        app:layout_constraintTop_toTopOf="@+id/textview_temperature"
        android:text="@string/minus" />

    <TextView
        android:id="@+id/textview_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_weather"
        tools:layout_editor_absoluteY="137dp"
        tools:text="10" />

    <TextView
        android:id="@+id/textview_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="@+id/textview_temperature"
        app:layout_constraintStart_toEndOf="@+id/textview_temperature"
        app:layout_constraintTop_toTopOf="@+id/textview_temperature"
        android:text="@string/degree_sign" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_temperature">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunrise"
            style="@style/WeatherInfoLabel" />

        <TextView
            android:id="@+id/textview_sunrise_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="12:00" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunset"
            style="@style/WeatherInfoLabel" />

        <TextView
            android:id="@+id/textview_sunset_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="12:00" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            style="@style/WeatherInfoLabel" />

        <TextView
            android:id="@+id/textview_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="20%" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            style="@style/WeatherInfoLabel" />

        <TextView
            android:id="@+id/textview_windspeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="7 m/s" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_direction"
            style="@style/WeatherInfoLabel" />

        <TextView
            android:id="@+id/textview_wind_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="North West" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            style="@style/WeatherInfoLabel" />

        <TextView
            android:id="@+id/textview_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="7 mmHg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visibility"
            style="@style/WeatherInfoLabel" />

        <TextView
            android:id="@+id/textview_visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="2100 m" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>